# Chronometro

./: .gitmodules  CMakeLists.txt  Chronometro.jucer  README.md
JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h
Source/: Chronometro.h  Main.cpp  MainComponent.cpp  MainComponent.h  Music.h  SoundStall.h
